<resources>
    <string name="app_name">Entertainnet</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>


    <!-- Register -->

    <string name="user_name">User Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="tag">Tag</string>

</resources>
